# helios

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: HeliosConfig.cmake.in  LoggerConfig.cmake
examples/calculator/: CMakeLists.txt
examples/calculator/src/: calculator.hpp  client.hpp  main.cpp
include/core/: ievent_loop.hpp  ievent_queue.hpp  isignal_bus.hpp  module.hpp
include/core/event_loop/: event_loop.hpp  interface.hpp
include/core/event_queue/: event_queue.hpp  interface.hpp
include/core/module/: module.hpp
include/core/signal_bus/: interface.hpp  signal_bus.hpp
include/factory/: factory.hpp
include/logging/: ilogger_factory.hpp  isink.hpp  log_macros.hpp
include/logging/sink/: interface.hpp
modules/core/: CMakeLists.txt
modules/core/include/core/: active_h_object.hpp  event.hpp  event_loop.hpp  event_queue.hpp  future_result.hpp  future_result.inl  h_bus.hpp  h_loop.hpp  h_object.hpp  in_active_h_object.hpp  signal_bus.hpp
modules/core/src/: active_h_object.cpp  event_loop.cpp  event_queue.cpp  event_queue.hpp  h_bus.cpp  h_object.cpp  in_active_h_object.cpp  long_running_thread.cpp  long_running_thread.hpp  signal_bus.cpp
modules/core/tests/: CMakeLists.txt  active_h_object_test.cpp  event_loop_test.cpp  future_result_test.cpp  h_object_test.cpp  hobject_test.cpp  in_active_h_object_test.cpp  long_running_thread_test.cpp
modules/logger/: CMakeLists.txt
modules/logger/cmake/: config.cmake
modules/logger/include/logger/: log_macros.hpp  log_message_factory.hpp  logger.hpp
modules/logger/src/: file_sink.cpp  file_sink.hpp  log_config.hpp.in  log_level.hpp  log_macros.hpp  log_message.hpp  log_message_factory.cpp  log_message_factory.hpp  logger.cpp  standard_output_sink.cpp  standard_output_sink.hpp
modules/logger/tests/: CMakeLists.txt  logger_test.cpp
modules/timesys/: CMakeLists.txt
modules/timesys/include/timesys/: timers_manager.hpp
modules/timesys/src/: timers_manager.cpp
modules/timesys/tests/: CMakeLists.txt  timers_manager_test.cpp
src/EventQueue/: DefaultEventQueue.cpp  DefaultEventQueue.hpp  Interface.hpp
src/core/: event.hpp  event_loop.cpp  event_loop.hpp  event_queue.cpp  event_queue.hpp  signal_bus.cpp  signal_bus.hpp
src/core/event_loop/: event_loop.cpp  event_loop.hpp
src/core/event_queue/: event_queue.cpp  event_queue.hpp
src/core/signal_bus/: signal_bus.cpp  signal_bus.hpp
src/core/types/: id.hpp
src/factory/: factory.cpp
src/logging/: default_logger_factory.cpp  default_logger_factory.hpp  file.cpp  file.hpp  file_sink.cpp  file_sink.hpp  ifile.hpp  ilogger.hpp  log_config.hpp.in  log_level.hpp  log_message.cpp  log_message.hpp  logger.cpp  logger.hpp  standard_output_sink.cpp  standard_output_sink.hpp
src/logging/sink/: standard_output_sink.cpp  standard_output_sink.hpp
tests/: CMakeLists.txt
tests/EventQueue/: TestDefaultEventQueue.cpp
tests/core/: event_loop.cpp  event_queue.cpp  module.cpp  module_old.cpp  signal_bus.cpp
tests/core/event_loop/: event_loop.cpp
tests/core/event_queue/: event_queue.cpp
tests/core/module/: module.cpp
tests/core/signal_bus/: signal_bus.cpp
tests/logging/: file_sink.cpp  file_sink_old.cpp  logger.cpp  standard_output_sink.cpp  standard_output_sink_old.cpp
tests/logging/sink/: standard_output_sink.cpp
tests/mocks/core/: mock_event_queue.hpp  mock_signal_bus.hpp
tests/mocks/core/event_queue/: mock_event_queue.hpp
tests/mocks/core/signal_bus/: mock_signal_bus.hpp
